simplify orbital logistics